# libwap32

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  io.cpp  libwap32.sln  libwap32.vcxproj  libwap32.vcxproj.filters
include/: wap32.h
include/wap32/: buffer.h  common.h  errors.h  pid.h  wwd.h
misc/: wwd_structs.h
src/: buffer.cpp  buffer.h  common.h  errors.cpp  errors.h  io.cpp  io.h  pid.cpp  pid.h  pid_read.cpp  pid_write.cpp  utils.cpp  utils.h  wwd.cpp  wwd.h  wwd_io.h  wwd_properties.cpp  wwd_read.cpp  wwd_read.h  wwd_write.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  wwd.cpp
tests/wwd_files/: Bushy.wwd  LePortdeCoolness.wwd  ParadiseCove.wwd  RETAIL01.WWD  RETAIL01_badsig.WWD  RETAIL01_nocompress.WWD  RETAIL02.WWD  RETAIL03_nocompress.WWD  RETAIL04.WWD  RETAIL05.WWD  RETAIL06.WWD  RETAIL07.WWD  RETAIL08.WWD  RETAIL09.WWD  RETAIL10.WWD  RETAIL11.WWD  RETAIL12.WWD  RETAIL13.WWD  RETAIL14.WWD  RockySwitch.wwd
tools/wwd2html/: .gitignore  RATAIL01.html  RATAIL02.html  RATAIL03.html  RATAIL04.html  RATAIL09.html  RETAIL03.WWD  RETAIL07.html  RETAIL08.html  gen_image_set_map.py  gen_image_sets_dict.py  image_set_map.dict  image_sets.dict  index.html  index.mako  pywap32.py  wwd2html.py  wwd_open.py
